Translate points (-50%,-50%) to center them

--- a/src/SVGEditor.css
+++ b/src/SVGEditor.css
@@ -126,6 +126,7 @@
   width: 5px;
   height: 5px;
   border-radius: 5px;
+  transform: translate(-50%, -50%);
   background-color: var(--marker-color);
 }
 .SVGEditor-marker.SVGEditor-selected-marker {
